--- a/sass/list.scss
+++ b/sass/list.scss
@@ -1,3 +1,7 @@
+.all-list.invisible {
+  opacity: 0;
+}
+
 .list {
   z-index: 10;
   .accordion--list {
